# SRAG

./: .env.example  .gitignore  LAUNCH_INSTRUCTIONS.md  README.md  STEP1_EXECUTION_GUIDE.md  bulletproof_foundry_launcher.py  check_all_endpoints.py  check_training_status.py  create_step2_dataset.py  diagnose_current_training.py  download_real_datasets.py  extract_phase3_calibrator.py  fix_confidence_diversity.py  fix_solution_generator_confidence.py  modal_test_grpo.py  modal_test_grpo_FINAL.py  modal_test_grpo_v2.py  modal_test_grpo_v4.py  modal_test_simple.py  phase3_training_status.txt  pyproject.toml  requirements.txt  retrain_calibrator.py  run_phase1_star_training.py  run_phase1_to_phase3.py  run_phase3_simple.py  run_phase3_star_training.py  run_phase3_tuned.py  run_phase4_comprehensive_evaluation.py  run_phase4_step1_humaneval.py  run_step2_training.py  select_diverse_phase1_problems.py  terminate_specific_bids.py  test_grpo_pipeline.py  test_grpo_verbose.py  test_phase2_strategic_oracle.py  test_phase4_integration.py  test_players_minimal.py  test_sragv_players_integration.py  test_step1.py
config/: config.yaml
data/: processed_apps.json  real_coding_problems.json  step2_training_dataset.json
loophealth/: README.md  __init__.py  benchmark.py  coverage.py  coverage_analyze.py  monitor.py  regimes.py  signals.py  trl_callback.py
phase1_results/: phase1_final_report.json  phase1_star_results.json  solution_data.json
phase3_results/: phase1_to_phase3_results_20250806_144530.json
tests/: test_step1_robust.py  test_step2_comprehensive.py
(+148 files in other folders)
